--- a/HNSHOP/Views/Accounts/Index.cshtml
+++ b/HNSHOP/Views/Accounts/Index.cshtml
@@ -1,7 +1,10 @@
 ﻿@using System.Globalization
 @model HNSHOP.Dtos.Response.AccountResDto
 <link href="~/css/profile.css?t=@DateTime.Now.Ticks" rel="stylesheet">
+@{
+	ViewData["Title"] = "Thông Tin";
 
+}
 <section id="cart_items">
 	<div class="container p-5">
 		<div class="breadcrumbs">
