--- a/HNSHOP/Views/AdminStats/Index.cshtml
+++ b/HNSHOP/Views/AdminStats/Index.cshtml
@@ -1,6 +1,6 @@
 ﻿@using Newtonsoft.Json
 @{
-    ViewData["Title"] = "Thống kê sản phẩm";
+    ViewData["Title"] = "Thống Kê Sản Phẩm";
     Layout = "_Layout";
 
     var categoryStats = ViewBag.ProductByCategory as IEnumerable<dynamic>;
