--- a/HNSHOP/Views/Auth/Login.cshtml
+++ b/HNSHOP/Views/Auth/Login.cshtml
@@ -1,7 +1,7 @@
 ﻿@model HNSHOP.Dtos.Request.LoginReqDto
 
 @{
-    ViewData["Title"] = "Đăng nhập";
+    ViewData["Title"] = "Đăng Nhập";
 }
 <link href="~/css/auth.css" rel="stylesheet">
 @if (TempData["SuccessMessage"] != null)
