--- a/HNSHOP/Views/Auth/Register.cshtml
+++ b/HNSHOP/Views/Auth/Register.cshtml
@@ -1,7 +1,7 @@
 ﻿@model HNSHOP.Dtos.Request.RegisterReqDto
 
 @{
-    ViewData["Title"] = "Đăng ký tài khoản";
+    ViewData["Title"] = "Đăng Ký Tài Khoản";
 }
 <link href="~/css/auth.css" rel="stylesheet">
 @if (TempData["SuccessMessage"] != null)
