--- a/HNSHOP/Views/Auth/RegisterShop.cshtml
+++ b/HNSHOP/Views/Auth/RegisterShop.cshtml
@@ -1,7 +1,7 @@
 ﻿@model HNSHOP.Dtos.Request.RegisterShopReqDto
 
 @{
-    ViewData["Title"] = "Đăng ký Shop";
+    ViewData["Title"] = "Đăng Ký Shop";
 }
 <link href="~/css/auth.css" rel="stylesheet">
 @if (TempData["SuccessMessage"] != null)
