--- a/HNSHOP/Views/Auth/VerifyEmail.cshtml
+++ b/HNSHOP/Views/Auth/VerifyEmail.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    ViewData["Title"] = "Xác thực Email";
+    ViewData["Title"] = "Xác Thực Email";
 }
 <link href="~/css/auth.css" rel="stylesheet">
 @if (TempData["SuccessMessage"] != null)
