--- a/HNSHOP/Views/Auth/VerifyResetCode.cshtml
+++ b/HNSHOP/Views/Auth/VerifyResetCode.cshtml
@@ -1,7 +1,7 @@
 ﻿@model HNSHOP.Dtos.Request.ResetPasswordReqDto
 
 @{
-    ViewData["Title"] = "Đặt lại mật khẩu";
+    ViewData["Title"] = "Đặt Lại Mật Khẩu";
 }
 <link href="~/css/auth.css" rel="stylesheet">
 
