--- a/HNSHOP/Views/Cart/Index.cshtml
+++ b/HNSHOP/Views/Cart/Index.cshtml
@@ -1,12 +1,16 @@
 ﻿@using System.Globalization
 @model List<HNSHOP.Dtos.Response.ShopCartGroupDto>
+@{
+    ViewData["Title"] = "Giỏ Hàng";
+
+}
 
 <section id="cart_items">
     <div class="container" id="cart-container">
         <div class="breadcrumbs">
             <ol class="breadcrumb">
-                <li><a href="#">Home</a></li>
-                <li class="active">Shopping Cart</li>
+                <li><a href="#">Trang Chủ</a></li>
+                <li class="active">Giỏ Hàng</li>
             </ol>
         </div>
 
