--- a/HNSHOP/Views/Chat/Index.cshtml
+++ b/HNSHOP/Views/Chat/Index.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    ViewBag.Title = "Trò chuyện gần đây";
+    ViewBag.Title = "Trò Chuyện";
     var conversations = ViewBag.Conversations as List<HNSHOP.Models.Conversation>;
     var senderRole = ViewBag.SenderRole as string;
     int? senderId = ViewBag.SenderId as int?;
