--- a/HNSHOP/Views/Customers/Index.cshtml
+++ b/HNSHOP/Views/Customers/Index.cshtml
@@ -1,4 +1,8 @@
-﻿<style>
+﻿@{
+    ViewData["Title"] = "Quản Lý Khách Hàng";
+
+}
+<style>
     .avatar {
         width: 70px;
         height: 70px;
