--- a/HNSHOP/Views/Home/Index.cshtml
+++ b/HNSHOP/Views/Home/Index.cshtml
@@ -5,6 +5,8 @@
     string sortType = ViewBag.SortType as string ?? "desc";
     string search = ViewBag.Search as string ?? "";
     int? productTypeId = ViewBag.ProductTypeId as int?;
+    ViewData["Title"] = "Trang Chủ";
+
 }
 
 
