--- a/HNSHOP/Views/Orders/Create.cshtml
+++ b/HNSHOP/Views/Orders/Create.cshtml
@@ -1,4 +1,7 @@
-﻿@* Không cần dùng @model nếu dùng JS để gửi *@
+﻿@{
+    ViewData["Title"] = "Xác Nhận Đặt Hàng";
+
+}
 <style>
     .text-danger {
         color: #dc3545;
