--- a/HNSHOP/Views/Orders/Details.cshtml
+++ b/HNSHOP/Views/Orders/Details.cshtml
@@ -1,4 +1,8 @@
 ﻿@model HNSHOP.Dtos.Response.OrderResDto
+@{
+    ViewData["Title"] = "Chi Tiết Đơn Hàng";
+
+}
 <style>
     .text-danger {
         color: #dc3545;
