--- a/HNSHOP/Views/ProductType/Index.cshtml
+++ b/HNSHOP/Views/ProductType/Index.cshtml
@@ -1,5 +1,8 @@
 ﻿@model List<HNSHOP.Models.ProductType>
+@{
+    ViewData["Title"] = "Quản Lý Loại Sản Phẩm";
 
+}
 <section id="cart_items">
     <div class="container p-5">
         <div class="breadcrumbs">
