--- a/HNSHOP/Views/SaleEvent/Create.cshtml
+++ b/HNSHOP/Views/SaleEvent/Create.cshtml
@@ -1,4 +1,8 @@
 ﻿@using System.Globalization
+@{
+    ViewData["Title"] = "Thêm Chương Trình Giảm Giá";
+
+}
  <section id="cart_items">
         <div class="container p-5">
             <div class="breadcrumbs">
