--- a/HNSHOP/Views/SaleEvent/Details.cshtml
+++ b/HNSHOP/Views/SaleEvent/Details.cshtml
@@ -1,5 +1,9 @@
 ﻿@using System.Globalization
 @model HNSHOP.Dtos.Response.SaleEventProductResDto
+@{
+    ViewData["Title"] = "Chi Tiết Chương Trình Giảm Giá";
+
+}
 <style>
     .full-width-banner {
         width: 80vw;
