--- a/HNSHOP/Views/SaleEvent/Edit.cshtml
+++ b/HNSHOP/Views/SaleEvent/Edit.cshtml
@@ -1,6 +1,9 @@
 ﻿@using System.Globalization
 @model HNSHOP.Dtos.Response.SaleEventProductResDto
+@{
+    ViewData["Title"] = "Cập Nhật Chương Trình Giảm Giá";
 
+}
 <section id="cart_items">
     <div class="container p-5">
         <div class="breadcrumbs">
