--- a/HNSHOP/Views/SaleEvent/Index.cshtml
+++ b/HNSHOP/Views/SaleEvent/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@model List<HNSHOP.Dtos.Response.SaleEventResDto>
 
 @{
-    ViewBag.Title = "Quản lý Chương trình Giảm giá";
+    ViewBag.Title = "Quản Lý Chương Trình Giảm Giá";
 }
 
 <section id="cart_items">
