--- a/HNSHOP/Views/Shared/_Layout.cshtml
+++ b/HNSHOP/Views/Shared/_Layout.cshtml
@@ -7,7 +7,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name="description" content="">
 	<meta name="author" content="">
-	<title>HNShop</title>
+	<title>@ViewData["Title"] | HNShop</title>
 	<!-- Nếu bạn dùng các class cũ như 'fa fa-calendar-o', hãy dùng Font Awesome 4 -->
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
@@ -30,6 +30,7 @@
 	<link rel="apple-touch-icon-precomposed" sizes="72x72" href="~/images/ico/apple-touch-icon-72-precomposed.png">
 	<link rel="apple-touch-icon-precomposed" href="~/images/ico/apple-touch-icon-57-precomposed.png">
 	<!-- Thêm vào trong <head> -->
+	<link rel="icon" type="image/x-icon" href="~/images/home/favicon.ico" />
 
 
 	<!-- Thư viện SweetAlert2 -->
