--- a/HNSHOP/Views/Auth/AccessDenied.cshtml
+++ b/HNSHOP/Views/Auth/AccessDenied.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    ViewData["Title"] = "Access Denied";
+    ViewData["Title"] = "Không có Quyền Truy Cập";
 }
 <section id="cart_items">
     <div class="container p-5">
