--- a/HNSHOP/Views/Auth/ForgotPassword.cshtml
+++ b/HNSHOP/Views/Auth/ForgotPassword.cshtml
@@ -1,7 +1,7 @@
 ﻿@model HNSHOP.Dtos.Request.ForgotPasswordReqDto
 
 @{
-    ViewData["Title"] = "Quên mật khẩu";
+    ViewData["Title"] = "Quên Quên Mật Khẩu";
 }
 <link href="~/css/auth.css" rel="stylesheet">
 
