--- a/HNSHOP/Views/Products/ManageProducts.cshtml
+++ b/HNSHOP/Views/Products/ManageProducts.cshtml
@@ -2,7 +2,7 @@
 @model List<HNSHOP.Dtos.Response.ProductResDto>
 
 @{
-    ViewBag.Title = "Quản lý sản phẩm";
+    ViewBag.Title = "Quản Lý Sản Phẩm";
 
 }
 <style>
